fixed the time block overlapping the save buttons issue for larger screens, added icon for save feature

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ textarea{
   border-bottom: 1px solid black;
   padding-top: 15px;
   font-size: 15px;
-  width: 10vw;
+  /* width: 10vw; */
 }
 
 .row {
@@ -78,7 +78,7 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
-  width: 10vw;
+  /* width: 10vw; */
 }
 
 .saveBtn i:hover {
